buttons-grid: change to adaptive columns instead of fixed value of 100px so if inner text of button is bigger, column stretches

--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -72,8 +72,7 @@
 
   &__buttons-grid {
     display: grid;
-    grid-template-columns: repeat(2, 100px);
-    grid-template-rows: auto auto;
+    grid-template-columns: repeat(2, min-content);
     gap: 30px 20px;
     max-width: 100%;
     margin-bottom: 30px;
